fix markdown preview

--- a/doshisha-media-app/package.json
+++ b/doshisha-media-app/package.json
@@ -20,7 +20,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
-    "remark-gfm": "^4.0.1"
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "strip-markdown": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
